# gql_auth

./: Cargo.toml  Deployment.yaml  README.md
integrations/apollo-router-plugin/: Cargo.toml  Dockerfile  router.yaml
integrations/apollo-router-plugin/src/: main.rs  sidecar_plugin.rs
wasm-sidecar/: Cargo.toml  Dockerfile
wasm-sidecar/src/: main.rs
