[package]
name = "wasm-sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
governor = "0.5.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"

# One for vanilla native binaries
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
warp = "0.3"

# One for wasm32-wasi / WasmEdge flavor
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
warp_wasi = "0.3"
