[package]
name = "apollo-router-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
apollo-router = "1.11"
async-trait = "0.1"
http = "0.2"
reqwest = "0.11.14"
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
serde_json_bytes = "0.2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
